kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
  labels:
    app: frontend
spec:
  tls:
  - hosts:
    - shop.35.244.32.157.nip.io
    secretName: hipster-shop-frontend
  rules:
  - host: shop.35.244.32.157.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
